--- a/app/src/main/res/layout/activity_usersignup.xml
+++ b/app/src/main/res/layout/activity_usersignup.xml
@@ -33,7 +33,9 @@
         android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="154dp"
         android:text="submit"
         android:textSize="18sp" />
 
@@ -41,8 +43,28 @@
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="219dp"
+        android:text="password should be atleast10 characters" />
+
+    <EditText
+        android:id="@+id/cus_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="190dp"
-        android:text="password should be atleast10 characters" />
+        android:layout_marginTop="195dp"
+        android:ems="10"
+        android:hint="name"
+        android:inputType="textPersonName" />
+
+    <EditText
+        android:id="@+id/phone"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:ems="10"
+        android:hint="Phn No"
+        android:inputType="phone" />
 </RelativeLayout>
