--- a/app/src/main/res/layout/activity_navigate.xml
+++ b/app/src/main/res/layout/activity_navigate.xml
@@ -20,7 +20,6 @@
         android:layout_height="match_parent"
         android:layout_gravity="start"
         android:fitsSystemWindows="true"
-        app:headerLayout="@layout/nav_header_navigate"
-        app:menu="@menu/activity_navigate_drawer" />
+        app:headerLayout="@layout/nav_header_navigate" />
 
 </android.support.v4.widget.DrawerLayout>
