--- a/app/src/main/res/layout/orders_dr_card.xml
+++ b/app/src/main/res/layout/orders_dr_card.xml
@@ -28,7 +28,8 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="5dip"
                     android:layout_weight="1"
-                    android:paddingLeft="5dip" />
+                    android:paddingLeft="5dip"
+                    android:textColor="@android:color/holo_blue_bright" />
             </TableRow>
 
 
@@ -46,7 +47,8 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="5dip"
                     android:layout_weight="1"
-                    android:paddingLeft="5dip" />
+                    android:paddingLeft="5dip"
+                    android:textColor="@android:color/holo_blue_dark" />
             </TableRow>
 
 
@@ -66,7 +68,8 @@
                     android:layout_marginLeft="5dip"
                     android:layout_weight="1"
                     android:inputType="number"
-                    android:paddingLeft="5dip" />
+                    android:paddingLeft="5dip"
+                    android:textColor="@android:color/holo_blue_dark" />
             </TableRow>
             <TableRow>
 
@@ -74,6 +77,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Feedback"
+                    android:textColor="@android:color/holo_blue_dark"
                     android:textStyle="bold" />
 
                 <TextView
@@ -83,7 +87,8 @@
                     android:layout_marginLeft="5dip"
                     android:layout_weight="1"
                     android:inputType="number"
-                    android:paddingLeft="5dip" />
+                    android:paddingLeft="5dip"
+                    android:textColor="@android:color/holo_blue_dark" />
             </TableRow>
 
             <TableRow>
