--- a/app/src/main/res/layout/activity_first.xml
+++ b/app/src/main/res/layout/activity_first.xml
@@ -4,7 +4,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/bgimg2"
     tools:context=".FirstActivity">
+
+    <TextView
+        android:id="@+id/myfont"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="44dp"
+        android:text="WELCOME"
+        android:textColor="@android:color/background_light"
+        android:textSize="30sp"
+        android:textStyle="bold" />
 
 
     <Button
@@ -12,22 +25,22 @@
         android:layout_width="150dp"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
+        android:background="@drawable/edittextstyle"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="111dp"
-        android:background="@color/colorPrimaryDark"
+        android:layout_marginTop="148dp"
         android:text="Customer"
-        android:textColor="@android:color/background_light"
+        android:textColor="@color/colorPrimaryDark"
         android:textSize="18sp"
         android:textStyle="bold" />
 
     <Button
         android:id="@+id/admin"
         android:layout_width="150dp"
+        android:background="@drawable/edittextstyle"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:background="@color/colorPrimaryDark"
         android:text="Admin"
-        android:textColor="@android:color/background_light"
+        android:textColor="@color/colorPrimaryDark"
         android:textSize="18sp"
         android:textStyle="bold" />
 
@@ -38,9 +51,11 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="113dp"
-        android:background="@color/colorPrimaryDark"
+        android:background="@drawable/edittextstyle"
         android:text="Driver"
-        android:textColor="@android:color/background_light"
+        android:textColor="@color/colorPrimaryDark"
         android:textSize="18sp"
         android:textStyle="bold" />
+
+
 </RelativeLayout>
