--- a/app/src/main/res/layout/drivers_a_card.xml
+++ b/app/src/main/res/layout/drivers_a_card.xml
@@ -2,101 +2,228 @@
 <FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <LinearLayout
+
+    <android.support.v7.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:elevation="5dp"
+        android:layout_margin="10dp">
 
-        <TableLayout
-            android:id="@+id/formLayout"
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="102dp">
+            android:layout_height="match_parent">
 
-            <TableRow>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:id="@+id/one">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Customer Name"
-                    android:textStyle="bold" />
+                    android:text="Driver name :"
+                    android:layout_margin="5dp"
+                    style="@style/Base.TextAppearance.AppCompat.Large"/>
 
                 <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="5dp"
                     android:id="@+id/drivername"
+                    android:text="Name "
+                    style="@style/Base.TextAppearance.AppCompat.Large"/>
+
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:id="@+id/two"
+                android:layout_below="@+id/one">
+
+                <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="5dip"
-                    android:layout_weight="1"
-                    android:paddingLeft="5dip" />
-            </TableRow>
-
-
-            <TableRow>
+                    android:text="Phone :"
+                    android:layout_margin="5dp"
+                    style="@style/Base.TextAppearance.AppCompat.Large"/>
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Phone Number"
-                    android:textStyle="bold" />
-
-                <TextView
+                    android:layout_margin="5dp"
                     android:id="@+id/phonenumber"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="5dip"
-                    android:layout_weight="1"
-                    android:paddingLeft="5dip" />
-            </TableRow>
+                    android:text="Phone "
+                    style="@style/Base.TextAppearance.AppCompat.Large"/>
 
-            <TableRow>
+            </LinearLayout>
+
+
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:id="@+id/four"
+                android:layout_below="@+id/two">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Load"
-                    android:textStyle="bold" />
+                    android:text="Load :"
+                    android:layout_margin="5dp"
+                    style="@style/Base.TextAppearance.AppCompat.Large"/>
 
                 <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="5dp"
                     android:id="@+id/load"
+                    android:text="load "
+                    style="@style/Base.TextAppearance.AppCompat.Large"/>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:id="@+id/five"
+                android:layout_below="@+id/four">
+
+                <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="5dip"
-                    android:layout_weight="1"
-                    android:paddingLeft="5dip" />
-            </TableRow>
-
-
-            <TableRow>
+                    android:text="Vehicle Type :"
+                    android:layout_margin="5dp"
+                    style="@style/Base.TextAppearance.AppCompat.Large"/>
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Vehicle Type"
-                    android:textStyle="bold" />
-
-                <TextView
+                    android:layout_margin="5dp"
                     android:id="@+id/type"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="5dip"
-                    android:layout_weight="1"
-                    android:inputType="number"
-                    android:paddingLeft="5dip" />
-            </TableRow>
-            <TableRow>
+                    android:text="vehicle "
+                    style="@style/Base.TextAppearance.AppCompat.Large"/>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:id="@+id/six"
+                android:layout_below="@+id/five">
 
                 <Button
-                    android:id="@+id/feedback"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Feedback">
-
+                android:id="@+id/feedback"
+                android:layout_width="wrap_content"
+                    android:layout_margin="10dp"
+                android:layout_height="wrap_content"
+                android:text="Feedback">
                 </Button>
 
-            </TableRow>
+            </LinearLayout>
+        </RelativeLayout>
 
-        </TableLayout>
-    </LinearLayout>
+    </android.support.v7.widget.CardView>
+
+    <!--<LinearLayout-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content">-->
+
+        <!--<TableLayout-->
+            <!--android:id="@+id/formLayout"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="match_parent"-->
+            <!--android:layout_alignParentTop="true"-->
+            <!--android:layout_centerHorizontal="true"-->
+            <!--android:layout_marginTop="102dp">-->
+
+            <!--<TableRow>-->
+
+                <!--<TextView-->
+                    <!--android:layout_width="wrap_content"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--android:text="Customer Name"-->
+                    <!--android:textStyle="bold" />-->
+
+                <!--<TextView-->
+                    <!--android:id="@+id/drivername"-->
+                    <!--android:layout_width="wrap_content"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--android:layout_marginLeft="5dip"-->
+                    <!--android:layout_weight="1"-->
+                    <!--android:paddingLeft="5dip" />-->
+            <!--</TableRow>-->
+
+
+            <!--<TableRow>-->
+
+                <!--<TextView-->
+                    <!--android:layout_width="wrap_content"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--android:text="Phone Number"-->
+                    <!--android:textStyle="bold" />-->
+
+                <!--<TextView-->
+                    <!--android:id="@+id/phonenumber"-->
+                    <!--android:layout_width="wrap_content"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--android:layout_marginLeft="5dip"-->
+                    <!--android:layout_weight="1"-->
+                    <!--android:paddingLeft="5dip" />-->
+            <!--</TableRow>-->
+
+            <!--<TableRow>-->
+
+                <!--<TextView-->
+                    <!--android:layout_width="wrap_content"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--android:text="Load"-->
+                    <!--android:textStyle="bold" />-->
+
+                <!--<TextView-->
+                    <!--android:id="@+id/load"-->
+                    <!--android:layout_width="wrap_content"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--android:layout_marginLeft="5dip"-->
+                    <!--android:layout_weight="1"-->
+                    <!--android:paddingLeft="5dip" />-->
+            <!--</TableRow>-->
+
+
+            <!--<TableRow>-->
+
+                <!--<TextView-->
+                    <!--android:layout_width="wrap_content"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--android:text="Vehicle Type"-->
+                    <!--android:textStyle="bold" />-->
+
+                <!--<TextView-->
+                    <!--android:id="@+id/type"-->
+                    <!--android:layout_width="wrap_content"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--android:layout_marginLeft="5dip"-->
+                    <!--android:layout_weight="1"-->
+                    <!--android:inputType="number"-->
+                    <!--android:paddingLeft="5dip" />-->
+            <!--</TableRow>-->
+            <!--<TableRow>-->
+
+                <!--<Button-->
+                    <!--android:id="@+id/feedback"-->
+                    <!--android:layout_width="wrap_content"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--android:text="Feedback">-->
+
+                <!--</Button>-->
+
+            <!--</TableRow>-->
+
+        <!--</TableLayout>-->
+    <!--</LinearLayout>-->
 
 </FrameLayout>
