--- a/app/src/main/res/layout/orders_cus_card.xml
+++ b/app/src/main/res/layout/orders_cus_card.xml
@@ -1,107 +1,134 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <LinearLayout
+    <android.support.v7.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:elevation="5dp"
+        android:layout_margin="10dp">
 
-        <TableLayout
-            android:id="@+id/formLayout"
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="102dp">
+            android:layout_height="match_parent">
 
-            <TableRow>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:id="@+id/one">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Driver Name"
-                    android:textStyle="bold" />
+                    android:text="Driver name :"
+                    android:layout_margin="5dp"
+                    style="@style/Base.TextAppearance.AppCompat.Large"/>
 
                 <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="5dp"
                     android:id="@+id/drivername"
+                    android:text="Name "
+                    style="@style/Base.TextAppearance.AppCompat.Large"/>
+
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:id="@+id/two"
+                android:layout_below="@+id/one">
+
+                <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="5dip"
-                    android:layout_weight="1"
-                    android:paddingLeft="5dip"
-                    android:textColor="@android:color/holo_blue_dark" />
-            </TableRow>
-
-
-            <TableRow>
+                    android:text="Phone :"
+                    android:layout_margin="5dp"
+                    style="@style/Base.TextAppearance.AppCompat.Large"/>
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Phone Number"
-                    android:textStyle="bold" />
-
-                <TextView
+                    android:layout_margin="5dp"
                     android:id="@+id/phonenumber"
+                    android:text="Phone "
+                    style="@style/Base.TextAppearance.AppCompat.Large"/>
+
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:id="@+id/three"
+                android:layout_below="@+id/two">
+
+                <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="5dip"
-                    android:layout_weight="1"
-                    android:paddingLeft="5dip" />
-            </TableRow>
-
-            <TableRow>
+                    android:text="Load :"
+                    android:layout_margin="5dp"
+                    style="@style/Base.TextAppearance.AppCompat.Large"/>
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Load"
-                    android:textStyle="bold" />
-
-                <TextView
+                    android:layout_margin="5dp"
                     android:id="@+id/load"
+                    android:text="Loads "
+                    style="@style/Base.TextAppearance.AppCompat.Large"/>
+
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:id="@+id/four"
+                android:layout_below="@+id/three">
+
+                <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="5dip"
-                    android:layout_weight="1"
-                    android:paddingLeft="5dip" />
-            </TableRow>
-
-            <TableRow>
+                    android:text="Status :"
+                    android:layout_margin="5dp"
+                    style="@style/Base.TextAppearance.AppCompat.Large"/>
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="status"
-                    android:textStyle="bold" />
-
-                <TextView
+                    android:layout_margin="5dp"
                     android:id="@+id/status"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="5dip"
-                    android:layout_weight="1"
-                    android:inputType="number"
-                    android:paddingLeft="5dip" />
-            </TableRow>
-            <TableRow>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="feedback"
-                    android:textStyle="bold" />
+                    android:text="status "
+                    style="@style/Base.TextAppearance.AppCompat.Large"/>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:id="@+id/five"
+                android:layout_below="@+id/four">
 
                 <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Feedback :"
+                    android:layout_margin="5dp"
+                    style="@style/Base.TextAppearance.AppCompat.Large"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="5dp"
                     android:id="@+id/feedback"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="5dip"
-                    android:layout_weight="1"
-                    android:inputType="number"
-                    android:paddingLeft="5dip" />
-            </TableRow>
-        </TableLayout>
+                    android:text="No feedback "
+                    style="@style/Base.TextAppearance.AppCompat.Large"/>
 
-    </LinearLayout>
+            </LinearLayout>
+        </RelativeLayout>
 
-</FrameLayout>
+    </android.support.v7.widget.CardView>
+
+</RelativeLayout>
