--- a/app/src/main/res/menu/driver.xml
+++ b/app/src/main/res/menu/driver.xml
@@ -6,6 +6,9 @@
             android:title="Home"
             android:checked="true"/>
         <item
+            android:id="@+id/view_maps"
+            android:title="View Maps" />
+        <item
             android:id="@+id/orders_driver"
             android:title="New Orders" />
         <item
